--- a/spring-boot-doma-sample/src/main/resources/templates/index.html
+++ b/spring-boot-doma-sample/src/main/resources/templates/index.html
@@ -1,10 +1,1 @@
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-  </head>
-  <body>
-    Hello, world!!
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta http-equiv="content-type" content="text/html; charset=utf-8"/><title>vue-cli-sample</title><link href="/css/app.661abe01d5358fadbf6f67f7e5aed472.css" rel="stylesheet"/></head><body><div id="app"></div><script type="text/javascript" src="/js/manifest.8dde6e38dd4ac42b1c3e.js"></script><script type="text/javascript" src="/js/vendor.1a3e4655e800ec4cf1e8.js"></script><script type="text/javascript" src="/js/app.f76855d0f455e0b64fd9.js"></script></body></html>
