--- a/spring-boot-jasper-sample/src/main/resources/static/reports/TestReport.jrxml
+++ b/spring-boot-jasper-sample/src/main/resources/static/reports/TestReport.jrxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2017-03-08T23:34:15 -->
+<!-- 2017-04-07T23:17:57 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="TestReport" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3bcf4e84-742f-4208-b396-a352ea52a56e">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="holiday"/>
 	<queryString language="csv">
 		<![CDATA[]]>
 	</queryString>
 	<field name="holiday" class="java.lang.String"/>
-	<field name="holiday_name" class="java.lang.String"/>
+	<field name="holidayName" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -78,7 +78,7 @@
 				<textElement verticalAlignment="Middle">
 					<font fontName="ipaexm" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{holiday_name}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{holidayName}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
